# LunaScape

./: .gitignore  CMakeLists.txt  README.md
include/: audioManager.h  main.h  mediaLoader.h  mediaPicker.h  renderer.h  shader.h  video_player.h  wayWindow.h  wayWindowGL.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shader/: VertexShader.vert  fragmentShader.frag  vertexShader.vert
shader/compiled/: fullscreen.frag.spv  fullscreen.vert.spv
shader/source/: fullscreen.frag  fullscreen.vert
src/: audioManager.c  main.c  main.cpp  mediaLoader.c  mediaPicker.c  renderer.c  shader.c  video_player.c  wayWindow.c  wayWindowGL.c
